# SharedWorkerPool

./: README.md  pyproject.toml
scripts/: submit_shared_slurm_workers.sh
shared_worker_pool/: __init__.py  __main__.py  pool.py  runtime.py  submit_slurm.py
tests/: test_shared_worker_pool.py
