[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-worker-pool"
version = "0.1.0"
description = "Reusable Slurm-backed shared worker pool launcher and delegate runtime"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Kevin Leyton-Brown" }
]

[project.scripts]
shared-worker-pool = "shared_worker_pool.pool:main"
shared-worker-pool-submit-slurm-workers = "shared_worker_pool.submit_slurm:main"

[tool.setuptools.packages.find]
include = ["shared_worker_pool*"]
